clusters/dev/observability/ingress/loki-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: loki
  namespace: logging
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-cloudflare
spec:
  tls:
    - hosts:
        - loki.opsscope.dev
      secretName: loki-tls
  rules:
    - host: loki.opsscope.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: logging-loki
                port:
                  number: 3100
